# UNF_MLCamp2024_NNdemo

./: .gitignore  README.md  app.py  configs.py  load_models.py  pyproject.toml  requirements.txt
models/: 2024-07-19-18-11-11-kazr.pth
modules/: competition.py  game_setup.py
